--- a/YTRip/App.xaml
+++ b/YTRip/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="YTRipV2.App"
+﻿<Application x:Class="YTRip.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:YTRipV2"
+             xmlns:local="clr-namespace:YTRip"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
