--- a/YTRip/App.xaml
+++ b/YTRip/App.xaml
@@ -4,6 +4,8 @@
              xmlns:local="clr-namespace:YTRip"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <Style TargetType="{x:Type Image}">
+            <Setter Property="RenderOptions.BitmapScalingMode" Value="HighQuality"/>
+        </Style>
     </Application.Resources>
 </Application>
